# esdb-native-client

./: .gitignore  CMakeLists.txt  LICENSE  README.md  esdb.cpp  esdb.h
src/: connection_string.cpp  connection_string.h  data.cpp  data.h  endpoint.cpp  endpoint.h  lib.cpp  settings.cpp  settings.h
tests/: connection_string_tests.cpp
tests/fixtures/: valid_connection_strings.json
